--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -4,3 +4,8 @@ $lighterBlue: #233E8B;
 $lightPurple: #AA2EE6;
 $kindaPink: #FF79CD;
 $yellowish: #FFDF6B;
+$white: #fff;
+
+//Font sizes
+$font-sm: 0.875rem; //14px
+$font-med: 1.125rem; //18px
