--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -5,11 +5,20 @@ html{
 *,*::before,*::after{
     box-sizing: inherit;
 }
+a,a:visited,a:hover{
+    text-decoration: none;
+}
 body{
     margin: 0;
     padding: 0;
     font-family: 'Oxygen', sans-serif;
+    font-size: 1.125rem;
 }
+.container{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+//Flexbox
 .flex{
     display: flex;
     &-jc-sb{
@@ -20,5 +29,32 @@ body{
     }
     &-ai-c{
         align-items: center;
+    }
+}
+button,.button{
+    padding: 0.875rem 2.1875rem;
+    border-radius: 50px;
+    cursor: pointer;
+    background: linear-gradient(90deg,$darkBlue,$lightPurple);
+    border: none;
+    color: white;
+    font-weight: 600;
+}
+//Visibility 
+.hide-for-mobile{
+    // hide for tablet and mobile
+    @include breakpoint-down(medium){
+        display: none;
+    }
+}
+.hide-for-desktop{
+    // hide for desktop viewport widths
+    @include breakpoint-up(large){
+        display: none;
+    }
+}
+.wide-for-mobile{
+    @include breakpoint-down(medium){
+        width: 100%;
     }
 }
