--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -1,3 +1,51 @@
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+  1% {
+    visibility: visible;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+  1% {
+    visibility: visible;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  99% {
+    visibility: hidden;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  99% {
+    visibility: hidden;
+  }
+  to {
+    opacity: 0;
+  }
+}
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -7,10 +55,20 @@ html {
   box-sizing: inherit;
 }
 
+a, a:visited, a:hover {
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Oxygen", sans-serif;
+  font-size: 1.125rem;
+}
+
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .flex {
@@ -26,16 +84,47 @@ body {
   align-items: center;
 }
 
+button, .button {
+  padding: 0.875rem 2.1875rem;
+  border-radius: 50px;
+  cursor: pointer;
+  background: linear-gradient(90deg, #23049D, #AA2EE6);
+  border: none;
+  color: white;
+  font-weight: 600;
+}
+
+@media (max-width: 63.9375em) {
+  .hide-for-mobile {
+    display: none;
+  }
+}
+
+@media (min-width: 64em) {
+  .hide-for-desktop {
+    display: none;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .wide-for-mobile {
+    width: 100%;
+  }
+}
+
 .header {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: white;
 }
 .header nav {
-  padding: 10px 27px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .header__logo {
-  height: 3.5rem;
-  text-decoration: none;
+  height: 3rem;
 }
 .header__logo img {
   height: 100%;
@@ -43,7 +132,7 @@ body {
 }
 .header__logo_title {
   padding: 0.5rem 0 0 0.5rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
   color: black;
 }
@@ -56,7 +145,87 @@ body {
   height: 4px;
   border-radius: 2px;
   background: linear-gradient(90deg, #23049D, #AA2EE6);
+  transition: all 0.2s ease-in-out;
+  transform-origin: 2px 2px;
 }
 .header__menu > span:not(:last-child) {
   margin-bottom: 4px;
+}
+.header__links a {
+  position: relative;
+  font-size: 1.125rem;
+  color: #233E8B;
+  font-weight: 600;
+  transition: color 0.3s ease-in-out;
+}
+.header__links a:not(:last-child) {
+  margin-right: 32px;
+}
+.header__links a::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 5px;
+  background: linear-gradient(90deg, #23049D, #AA2EE6);
+  left: 0;
+  right: 0;
+  bottom: -22px;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+.header__links a:hover {
+  color: #23049D;
+}
+.header__links a:hover::before {
+  opacity: 1;
+}
+.header.open .header__menu > span:first-child {
+  transform: rotate(45deg);
+}
+.header.open .header__menu > span:nth-child(2) {
+  opacity: 0;
+}
+.header.open .header__menu > span:last-child {
+  transform: rotate(-45deg);
+}
+.header .overlay {
+  display: block;
+  background-image: linear-gradient(#233E8B, transparent);
+  position: fixed;
+  top: 63px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  visibility: hidden;
+}
+.header .fade-in {
+  visibility: visible;
+  -webkit-animation: fade-in 0.3s ease-in-out forwards;
+          animation: fade-in 0.3s ease-in-out forwards;
+}
+.header .fade-out {
+  visibility: visible;
+  -webkit-animation: fade-out 0.3s ease-in-out forwards;
+          animation: fade-out 0.3s ease-in-out forwards;
+  visibility: hidden;
+}
+.header__overlay_menu {
+  display: block;
+  position: absolute;
+  top: 5rem;
+  width: calc(100% - 3rem);
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  border-radius: 2px;
+  background-color: white;
+  left: 50%;
+  padding: 1rem;
+  transform: translate(-50%);
+}
+.header__overlay_menu a {
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 1rem;
 }/*# sourceMappingURL=style.css.map */
