--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -35,10 +35,21 @@ button,.button{
     padding: 0.875rem 2.1875rem;
     border-radius: 50px;
     cursor: pointer;
-    background: linear-gradient(90deg,$darkBlue,$lightPurple);
+    background-size: 200% auto;
+    background-image: linear-gradient(to right,$darkBlue 0%,$lightPurple 50%,$darkBlue 100%);
     border: none;
     color: white;
     font-weight: 600;
+    transition: all 0.3s ease-in-out;
+    &:hover{
+        transform: scale(1.025);
+        background-position: right center;
+        box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+    }
+    &:active{
+        transform: scale(0.95);
+        background-position: left center;
+    }
 }
 //Visibility 
 .hide-for-mobile{
