--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -5,7 +5,13 @@ $lightPurple: #AA2EE6;
 $kindaPink: #FF79CD;
 $yellowish: #FFDF6B;
 $white: #fff;
+$dark: #222;
 
 //Font sizes
 $font-sm: 0.875rem; //14px
 $font-med: 1.125rem; //18px
+
+//Shadows
+$shadow1: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;;
+$shadow2: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+$shadow3:rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
