--- a/WebContent/app/css/_header.scss
+++ b/WebContent/app/css/_header.scss
@@ -4,6 +4,7 @@
     top: 0;
     z-index: 999;
     background-color: white;
+    box-shadow: $shadow1;
     nav{
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
@@ -18,8 +19,8 @@
     &__logo_title{
         padding: 0.5rem 0 0 0.5rem;
         //font-family: 'Fleur De Leah', cursive;
-        font-size: 1.5rem;
-        font-weight: bold;
+        font-size: 1.6rem;
+        font-weight: bolder;
         color: black;
     }
      &__logo_title_part{
@@ -43,7 +44,7 @@
         a{
             position: relative;
             font-size: $font-med;
-            color: $lighterBlue;
+            color: $dark;
             font-weight: 600;
             transition: color 0.3s ease-in-out;
             &:not(:last-child){
@@ -82,7 +83,7 @@
     }
     .overlay{
         display: block;
-        background-image: linear-gradient($lighterBlue,transparent);
+        background-image: linear-gradient($darkBlue 0%,$lighterBlue 50%,transparent 100%);
         position: fixed;
         top: 63px;
         left: 0;
@@ -106,22 +107,22 @@
         height: max-content;
         border-radius: 2px;
         background-color: white;
-        color: $lighterBlue;
         left:50%;
         padding: 1rem;
         transform: translate(-50%);
         visibility: hidden;
+        box-shadow: $shadow1;
         a{
             display: block;
+            color: $dark;
             width: 100%;
             text-align: center;
             padding: 1rem;
             font-weight: 600;
             transition: color 0.3s ease-in-out;
-            &:active{
+            &:hover{
                 color: $darkBlue;
             }
         }
-        
     }
 }
