--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -49,15 +49,23 @@ button,.button{
     color: white;
     font-weight: 700;
     transition: all 0.3s ease-in-out;
-    &:hover{
+    box-shadow: $shadow2;
+    &:hover,&:focus{
         transform: scale(1.025);
         background-position: right center;
-        box-shadow: $shadow2;
+        box-shadow: $shadow3;
     }
     &:active{
         transform: scale(0.95);
         background-position: left center;
     }
+}
+.flat-wide-button{
+    font-size: 1.3rem;
+    margin-top: 1.2rem;
+    width: 100%;
+    border-radius: 5px;
+    font-family: inherit;
 }
 //Inputs
 input{
@@ -65,9 +73,22 @@ input{
     outline: 0;
     background-color: $white;
     box-shadow: $shadow2;
-    font-size: 1rem;
     padding: 0.5rem 1rem;
     border-radius: 5px;
+    transition: all ease-in-out 0.15s;
+    &:focus{
+        transform: scale(1.005);
+        box-shadow: $shadow3;
+    }
+}
+.input-with-icon{
+    font-size: 1.1rem;
+    padding: 1rem;
+    padding-left: 3.3rem;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: 1.2rem;
+    background-position: 1rem 1.2rem;
 }
 //Visibility 
 .hide-for-mobile{
