--- a/WebContent/app/css/_header.scss
+++ b/WebContent/app/css/_header.scss
@@ -19,8 +19,8 @@
     &__logo_title{
         padding: 0.5rem 0 0 0.5rem;
         //font-family: 'Fleur De Leah', cursive;
-        font-size: 1.6rem;
-        font-weight: bolder;
+        font-size: 1.8rem;
+        font-weight: 700;
         color: black;
     }
      &__logo_title_part{
