--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -13,5 +13,6 @@ $font-med: 1.125rem; //18px
 
 //Shadows
 $shadow1: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;;
-$shadow2: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-$shadow3:rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+$shadow2: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;;
+$shadow3: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+$shadow4: rgba(45, 37, 122, 0.56) 0px 22px 70px 4px;
