--- a/WebContent/app/css/_animations.scss
+++ b/WebContent/app/css/_animations.scss
@@ -38,3 +38,32 @@
         background: linear-gradient(90deg,$lightPurple,$darkBlue);
     }
 }
+@keyframes reveal{
+    from{
+        max-height: 0;
+    }
+    to{
+        max-height: 10rem;
+    }
+}
+@keyframes conceal{
+    from{
+        max-height: 10rem;
+    }
+    to{
+        max-height: 0;
+    }
+}
+@keyframes rotateBy90 {
+    to{
+        transform: rotate(90deg);
+    }
+}
+@keyframes rotateByNeg90{
+    from{
+        transform: rotate(90deg);
+    }
+    to{
+        transform: rotate(0deg);
+    }
+}
