--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -10,6 +10,7 @@
     opacity: 1;
   }
 }
+
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -22,6 +23,7 @@
     opacity: 1;
   }
 }
+
 @-webkit-keyframes fade-out {
   from {
     visibility: visible;
@@ -34,6 +36,7 @@
     opacity: 0;
   }
 }
+
 @keyframes fade-out {
   from {
     visibility: visible;
@@ -46,6 +49,7 @@
     opacity: 0;
   }
 }
+
 @-webkit-keyframes highlight {
   from {
     width: 0;
@@ -54,6 +58,7 @@
     width: 100%;
   }
 }
+
 @keyframes highlight {
   from {
     width: 0;
@@ -62,29 +67,110 @@
     width: 100%;
   }
 }
+
 @-webkit-keyframes shiftGradient {
   from {
+    background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
     background: linear-gradient(90deg, #23049D, #AA2EE6);
   }
   to {
+    background: -webkit-gradient(linear, left top, right top, from(#AA2EE6), to(#23049D));
     background: linear-gradient(90deg, #AA2EE6, #23049D);
   }
 }
+
 @keyframes shiftGradient {
   from {
+    background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
     background: linear-gradient(90deg, #23049D, #AA2EE6);
   }
   to {
+    background: -webkit-gradient(linear, left top, right top, from(#AA2EE6), to(#23049D));
     background: linear-gradient(90deg, #AA2EE6, #23049D);
   }
 }
+
+@-webkit-keyframes reveal {
+  from {
+    max-height: 0;
+  }
+  to {
+    max-height: 10rem;
+  }
+}
+
+@keyframes reveal {
+  from {
+    max-height: 0;
+  }
+  to {
+    max-height: 10rem;
+  }
+}
+
+@-webkit-keyframes conceal {
+  from {
+    max-height: 10rem;
+  }
+  to {
+    max-height: 0;
+  }
+}
+
+@keyframes conceal {
+  from {
+    max-height: 10rem;
+  }
+  to {
+    max-height: 0;
+  }
+}
+
+@-webkit-keyframes rotateBy90 {
+  to {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+@keyframes rotateBy90 {
+  to {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+@-webkit-keyframes rotateByNeg90 {
+  from {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes rotateByNeg90 {
+  from {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
 html {
   font-size: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *::before, *::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 a, a:visited, a:hover {
@@ -94,7 +180,7 @@ a, a:visited, a:hover {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 1.125rem;
   color: #222;
 }
@@ -110,17 +196,29 @@ body {
     padding-right: 1rem;
   }
 }
+
 .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .flex-jc-sb {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 .flex-jc-c {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 .flex-ai-c {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 button, .button {
@@ -128,20 +226,28 @@ button, .button {
   border-radius: 50px;
   cursor: pointer;
   background-size: 200% auto;
+  background-image: -webkit-gradient(linear, left top, right top, from(#23049D), color-stop(50%, #AA2EE6), to(#23049D));
   background-image: linear-gradient(to right, #23049D 0%, #AA2EE6 50%, #23049D 100%);
   border: none;
   color: white;
   font-weight: 700;
+  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  -webkit-box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+          box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
+
 button:hover, button:focus, .button:hover, .button:focus {
-  transform: scale(1.025);
+  -webkit-transform: scale(1.025);
+          transform: scale(1.025);
   background-position: right center;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+          box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
+
 button:active, .button:active {
-  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
   background-position: left center;
 }
 
@@ -157,14 +263,19 @@ input {
   border: none;
   outline: 0;
   background-color: #fff;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  -webkit-box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+          box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   padding: 0.5rem 1rem;
   border-radius: 5px;
+  -webkit-transition: all ease-in-out 0.15s;
   transition: all ease-in-out 0.15s;
 }
+
 input:focus {
-  transform: scale(1.005);
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  -webkit-transform: scale(1.005);
+          transform: scale(1.005);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+          box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 .input-with-icon {
@@ -201,64 +312,102 @@ input:focus {
   line-height: 1.5;
 }
 
+.reveal {
+  -webkit-animation: reveal ease-in-out 0.3s forwards;
+          animation: reveal ease-in-out 0.3s forwards;
+}
+
+.conceal {
+  -webkit-animation: conceal ease-in-out 0.3s forwards;
+          animation: conceal ease-in-out 0.3s forwards;
+}
+
+.rotateBy90 {
+  -webkit-animation: rotateBy90 ease-in-out 0.3s forwards;
+          animation: rotateBy90 ease-in-out 0.3s forwards;
+}
+
+.rotateByNeg90 {
+  -webkit-animation: rotateByNeg90 ease-in-out 0.3s forwards;
+          animation: rotateByNeg90 ease-in-out 0.3s forwards;
+}
+
 .header {
   margin-bottom: 0.5rem;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 999;
   background-color: white;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
 .header nav {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+
 .header__logo {
   height: 3rem;
 }
+
 .header__logo img {
   height: 100%;
   width: auto;
 }
+
 .header__logo_title {
   padding: 0.5rem 0 0 0.5rem;
   font-size: 1.8rem;
   font-weight: 700;
   color: black;
 }
+
 .header__logo_title_part {
   color: #23049D;
 }
+
 .header__menu > span {
   display: block;
   width: 26px;
   height: 4px;
   border-radius: 2px;
+  background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
   background: linear-gradient(90deg, #23049D, #AA2EE6);
+  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  transform-origin: 2px 2px;
+  -webkit-transform-origin: 2px 2px;
+          transform-origin: 2px 2px;
 }
+
 .header__menu > span:not(:last-child) {
   margin-bottom: 4px;
 }
+
 .header__links a {
   position: relative;
   font-size: 1.125rem;
   color: #222;
   font-weight: 600;
+  -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
+
 .header__links a:not(:last-child) {
   margin-right: 32px;
 }
+
 .header__links a:hover {
   color: #23049D;
 }
+
 .header__links a:hover::before {
   content: "";
   display: block;
   position: absolute;
   height: 4px;
+  background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
   background: linear-gradient(90deg, #23049D, #AA2EE6);
   left: 0;
   right: 0;
@@ -267,17 +416,24 @@ input:focus {
   -webkit-animation: highlight ease-in-out 0.25s forwards;
           animation: highlight ease-in-out 0.25s forwards;
 }
+
 .header.open .header__menu > span:first-child {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
+
 .header.open .header__menu > span:nth-child(2) {
   opacity: 0;
 }
+
 .header.open .header__menu > span:last-child {
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
+
 .header .overlay {
   display: block;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#23049D), color-stop(50%, #233E8B), to(transparent));
   background-image: linear-gradient(#23049D 0%, #233E8B 50%, transparent 100%);
   position: fixed;
   top: 63px;
@@ -286,17 +442,20 @@ input:focus {
   bottom: 0;
   visibility: hidden;
 }
+
 .header .fade-in {
   visibility: visible;
   -webkit-animation: fade-in 0.3s ease-in-out forwards;
           animation: fade-in 0.3s ease-in-out forwards;
 }
+
 .header .fade-out {
   visibility: visible;
   -webkit-animation: fade-out 0.3s ease-in-out forwards;
           animation: fade-out 0.3s ease-in-out forwards;
   visibility: hidden;
 }
+
 .header__overlay_menu {
   position: absolute;
   top: 5rem;
@@ -308,10 +467,13 @@ input:focus {
   background-color: white;
   left: 50%;
   padding: 1rem;
-  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
   visibility: hidden;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+          box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
+
 .header__overlay_menu a {
   display: block;
   color: #222;
@@ -319,29 +481,42 @@ input:focus {
   text-align: center;
   padding: 1rem;
   font-weight: 600;
+  -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
+
 .header__overlay_menu a:hover {
   color: #23049D;
 }
 
 .hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row-reverse wrap;
-  justify-content: space-around;
-  align-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-flow: row-reverse wrap;
+          flex-flow: row-reverse wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: center;
+      align-content: center;
   min-height: 90vh;
 }
+
 .hero__illustration {
   width: 50%;
 }
+
 .hero__illustration img {
   width: 100%;
   height: auto;
 }
+
 .hero__action_tile {
   text-align: center;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+          box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
   width: 40%;
   padding: 2rem 2.5rem;
   border-radius: 1rem;
@@ -349,20 +524,25 @@ input:focus {
   height: -moz-max-content;
   height: max-content;
 }
+
 .hero__cta_search {
   background-image: url("../../images/search.png");
   margin-top: 1.2rem;
 }
+
 .hero__sugesstion a {
   color: #222;
 }
+
 .hero__sugesstion a:hover {
   color: #233E8B;
 }
 
 @media (max-width: 59.9375em) {
   .hero__action_tile {
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     padding: 0;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
