--- a/WebContent/app/css/admin-styles.css
+++ b/WebContent/app/css/admin-styles.css
@@ -10,7 +10,6 @@
     opacity: 1;
   }
 }
-
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -23,7 +22,6 @@
     opacity: 1;
   }
 }
-
 @-webkit-keyframes fade-out {
   from {
     visibility: visible;
@@ -36,7 +34,6 @@
     opacity: 0;
   }
 }
-
 @keyframes fade-out {
   from {
     visibility: visible;
@@ -49,7 +46,6 @@
     opacity: 0;
   }
 }
-
 @-webkit-keyframes highlight {
   from {
     width: 0;
@@ -58,7 +54,6 @@
     width: 100%;
   }
 }
-
 @keyframes highlight {
   from {
     width: 0;
@@ -67,29 +62,22 @@
     width: 100%;
   }
 }
-
 @-webkit-keyframes shiftGradient {
   from {
-    background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
     background: linear-gradient(90deg, #23049D, #AA2EE6);
   }
   to {
-    background: -webkit-gradient(linear, left top, right top, from(#AA2EE6), to(#23049D));
     background: linear-gradient(90deg, #AA2EE6, #23049D);
   }
 }
-
 @keyframes shiftGradient {
   from {
-    background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
     background: linear-gradient(90deg, #23049D, #AA2EE6);
   }
   to {
-    background: -webkit-gradient(linear, left top, right top, from(#AA2EE6), to(#23049D));
     background: linear-gradient(90deg, #AA2EE6, #23049D);
   }
 }
-
 @-webkit-keyframes reveal {
   from {
     max-height: 0;
@@ -98,7 +86,6 @@
     max-height: 10rem;
   }
 }
-
 @keyframes reveal {
   from {
     max-height: 0;
@@ -107,7 +94,6 @@
     max-height: 10rem;
   }
 }
-
 @-webkit-keyframes conceal {
   from {
     max-height: 10rem;
@@ -116,7 +102,6 @@
     max-height: 0;
   }
 }
-
 @keyframes conceal {
   from {
     max-height: 10rem;
@@ -125,52 +110,39 @@
     max-height: 0;
   }
 }
-
 @-webkit-keyframes rotateBy90 {
   to {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
+    transform: rotate(90deg);
   }
 }
-
 @keyframes rotateBy90 {
   to {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
+    transform: rotate(90deg);
   }
 }
-
 @-webkit-keyframes rotateByNeg90 {
   from {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
+    transform: rotate(90deg);
   }
   to {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 }
-
 @keyframes rotateByNeg90 {
   from {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
+    transform: rotate(90deg);
   }
   to {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 }
-
 html {
   font-size: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *, *::before, *::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 a, a:visited, a:hover {
@@ -180,7 +152,7 @@ a, a:visited, a:hover {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-size: 1.125rem;
   color: #222;
 }
@@ -196,29 +168,17 @@ body {
     padding-right: 1rem;
   }
 }
-
 .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .flex-jc-sb {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .flex-jc-c {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .flex-ai-c {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 button, .button {
@@ -226,28 +186,20 @@ button, .button {
   border-radius: 50px;
   cursor: pointer;
   background-size: 200% auto;
-  background-image: -webkit-gradient(linear, left top, right top, from(#23049D), color-stop(50%, #AA2EE6), to(#23049D));
   background-image: linear-gradient(to right, #23049D 0%, #AA2EE6 50%, #23049D 100%);
   border: none;
   color: white;
   font-weight: 700;
-  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  -webkit-box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-          box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
-
 button:hover, button:focus, .button:hover, .button:focus {
-  -webkit-transform: scale(1.025);
-          transform: scale(1.025);
+  transform: scale(1.025);
   background-position: right center;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-          box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
-
 button:active, .button:active {
-  -webkit-transform: scale(0.95);
-          transform: scale(0.95);
+  transform: scale(0.95);
   background-position: left center;
 }
 
@@ -263,19 +215,14 @@ input {
   border: none;
   outline: 0;
   background-color: #fff;
-  -webkit-box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-          box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   padding: 0.5rem 1rem;
   border-radius: 5px;
-  -webkit-transition: all ease-in-out 0.15s;
   transition: all ease-in-out 0.15s;
 }
-
 input:focus {
-  -webkit-transform: scale(1.005);
-          transform: scale(1.005);
-  -webkit-box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-          box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  transform: scale(1.005);
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 .input-with-icon {
@@ -334,80 +281,62 @@ input:focus {
 
 .header {
   margin-bottom: 0.5rem;
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 999;
   background-color: white;
-  -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-
 .header nav {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-
 .header__logo {
   height: 3rem;
 }
-
 .header__logo img {
   height: 100%;
   width: auto;
 }
-
 .header__logo_title {
   padding: 0.5rem 0 0 0.5rem;
   font-size: 1.8rem;
   font-weight: 700;
   color: black;
 }
-
 .header__logo_title_part {
   color: #23049D;
 }
-
 .header__menu > span {
   display: block;
   width: 26px;
   height: 4px;
   border-radius: 2px;
-  background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
   background: linear-gradient(90deg, #23049D, #AA2EE6);
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  -webkit-transform-origin: 2px 2px;
-          transform-origin: 2px 2px;
+  transform-origin: 2px 2px;
 }
-
 .header__menu > span:not(:last-child) {
   margin-bottom: 4px;
 }
-
 .header__links a {
   position: relative;
   font-size: 1.125rem;
   color: #222;
   font-weight: 600;
-  -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
-
 .header__links a:not(:last-child) {
   margin-right: 32px;
 }
-
 .header__links a:hover {
   color: #23049D;
 }
-
 .header__links a:hover::before {
   content: "";
   display: block;
   position: absolute;
   height: 4px;
-  background: -webkit-gradient(linear, left top, right top, from(#23049D), to(#AA2EE6));
   background: linear-gradient(90deg, #23049D, #AA2EE6);
   left: 0;
   right: 0;
@@ -416,24 +345,17 @@ input:focus {
   -webkit-animation: highlight ease-in-out 0.25s forwards;
           animation: highlight ease-in-out 0.25s forwards;
 }
-
 .header.open .header__menu > span:first-child {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
 }
-
 .header.open .header__menu > span:nth-child(2) {
   opacity: 0;
 }
-
 .header.open .header__menu > span:last-child {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
-
 .header .overlay {
   display: block;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#23049D), color-stop(50%, #233E8B), to(transparent));
   background-image: linear-gradient(#23049D 0%, #233E8B 50%, transparent 100%);
   position: fixed;
   top: 63px;
@@ -442,20 +364,17 @@ input:focus {
   bottom: 0;
   visibility: hidden;
 }
-
 .header .fade-in {
   visibility: visible;
   -webkit-animation: fade-in 0.3s ease-in-out forwards;
           animation: fade-in 0.3s ease-in-out forwards;
 }
-
 .header .fade-out {
   visibility: visible;
   -webkit-animation: fade-out 0.3s ease-in-out forwards;
           animation: fade-out 0.3s ease-in-out forwards;
   visibility: hidden;
 }
-
 .header__overlay_menu {
   position: absolute;
   top: 5rem;
@@ -467,13 +386,10 @@ input:focus {
   background-color: white;
   left: 50%;
   padding: 1rem;
-  -webkit-transform: translate(-50%);
-          transform: translate(-50%);
+  transform: translate(-50%);
   visibility: hidden;
-  -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-          box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
-
 .header__overlay_menu a {
   display: block;
   color: #222;
@@ -481,25 +397,18 @@ input:focus {
   text-align: center;
   padding: 1rem;
   font-weight: 600;
-  -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
-
 .header__overlay_menu a:hover {
   color: #23049D;
 }
 
 .header__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   width: 100%;
 }
-
 .header nav {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -510,31 +419,22 @@ input:focus {
   width: 100vw;
   height: 100vh;
 }
-
 .adminLogin__form {
   background-color: #fff;
   width: 30rem;
   padding: 2rem 3rem 3rem;
   border-radius: 1rem;
-  -webkit-box-shadow: rgba(45, 37, 122, 0.56) 0px 22px 70px 4px;
-          box-shadow: rgba(45, 37, 122, 0.56) 0px 22px 70px 4px;
+  box-shadow: rgba(45, 37, 122, 0.56) 0px 22px 70px 4px;
   margin: 1rem;
 }
-
 .adminLogin__form_header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-bottom: 1.2rem;
 }
-
 .adminLogin__form_id {
   background-image: url(../../images/avatar.png);
 }
-
 .adminLogin__form_pass {
   background-image: url(../../images/padlock.png);
   margin-top: 1.2rem;
@@ -545,39 +445,45 @@ input:focus {
     padding: 1.5rem;
   }
 }
-
 .sidebar {
   width: 15rem;
-  -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-          box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
+  align-content: flex-start;
   color: #fff;
   background: linear-gradient(-45deg, #23049D 0%, #AA2EE6 100%);
   padding-bottom: 1rem;
   height: 90.6vh;
   margin-top: -10px;
+  overflow-y: scroll;
+  scrollbar-color: auto;
+  scrollbar-width: thin;
 }
-
+.sidebar::-webkit-scrollbar {
+  width: 0.5rem;
+}
+.sidebar::-webkit-scrollbar-track {
+  background: #23049D;
+}
+.sidebar::-webkit-scrollbar-thumb {
+  background: #AA2EE6;
+  border-radius: 0.2rem;
+}
+.sidebar::-webkit-scrollbar-thumb:hover {
+  background: #AA2EE6;
+}
 .sidebar ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
 .sidebar__user {
   width: 100%;
   display: inherit;
-  position: -webkit-sticky;
   position: sticky;
   padding: 1.2rem;
 }
-
 .sidebar__user_avatar {
   width: 4rem;
   background-color: #fff;
@@ -587,62 +493,54 @@ input:focus {
   height: max-content;
   padding: 0.3rem 0.5rem;
 }
-
 .sidebar__user_avatar img {
   width: 100%;
   height: auto;
 }
-
 .sidebar__user_info {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
   padding: 0.5rem 1rem;
 }
-
 .sidebar__user_info span {
   display: block;
   width: 100%;
 }
-
 .sidebar__dropdown {
   width: 100%;
   padding: 1rem 0;
 }
-
 .sidebar__dropdown li {
-  padding: 0.3rem 0;
+  padding: 0.5rem 0;
   padding-left: 1.2rem;
 }
-
 .sidebar__dropdown_title {
   cursor: pointer;
   position: relative;
   border-bottom: 1px solid #AA2EE6;
 }
-
 .sidebar__dropdown_title:not(:first-child) {
   border-top: 1px solid #AA2EE6;
 }
-
 .sidebar__dropdown_title_arrow {
   display: block;
   position: absolute;
   right: 0;
   top: 0;
   font-family: monospace;
-  padding: 0.2rem 1.5rem;
+  padding: 0.7rem 1.5rem;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
-
 .sidebar__dropdown_items {
   max-height: 0;
   overflow: hidden;
 }
-
 .sidebar__dropdown_items a {
   color: #fff;
   font-size: 1rem;
 }
-/*# sourceMappingURL=admin-styles.css.map */
+.sidebar__footer {
+  position: sticky;
+}/*# sourceMappingURL=admin-styles.css.map */
