--- a/WebContent/app/css/_adminSideBar.scss
+++ b/WebContent/app/css/_adminSideBar.scss
@@ -1,4 +1,6 @@
 .sidebar{
+    position: absolute;
+    left:-15rem;
     width: 15rem;
     box-shadow: $shadow1;
     display: flex;
@@ -6,12 +8,13 @@
     align-content: flex-start;
     color: $white;
     background: linear-gradient(-45deg,$darkBlue 0%,$lightPurple 100%);
-    padding-bottom: 1rem;
-    height: 90.6vh;
+    padding-bottom: 4.5rem;
+    height: 90.6vh ;
     margin-top: -10px;
     overflow-y: scroll;
     scrollbar-color: auto;
     scrollbar-width: thin;
+    position: relative;
     &::-webkit-scrollbar {
     width: 0.5rem;
     }
@@ -33,7 +36,6 @@
     &__user{
         width: 100%;
         display: inherit;
-        position: sticky;
         padding: 1.2rem;
         &_avatar{
             width: 4rem;
@@ -91,6 +93,33 @@
         
     }
     &__footer{
-        position: sticky;
+        position: fixed;
+        width: 14.5rem;
+        height: 4rem;
+        bottom: 0;
+        background: linear-gradient(45deg,$darkBlue 0%,$lighterBlue 100%);
+        display: flex;
+        justify-content: space-around;
+        padding: 0.5rem;
+        &_icon{
+            display: flex;
+            justify-content: center;
+            display: block;
+            height: 3rem;
+            width: 3rem;
+            border-radius: 50%;
+            margin: 0.3rem;
+            padding: 0.7rem;
+            transition: all ease-in-out 0.2s;
+            &:hover{
+                    transform: scale(1.02);
+                    background-color: rgba($color: #000000, $alpha: 0.2);
+            }
+            img{
+                margin: 0.2rem;
+                max-height: 100%;
+                width: auto;
+            }
+        }
     }
 }
