--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -14,6 +14,7 @@ body{
     font-family: 'Nunito', sans-serif;
     font-size: 1.125rem;
     color: $dark;
+    position: relative;
 }
 .container{
     padding-left: 1.5rem;
@@ -124,4 +125,10 @@ input{
 }
 .rotateByNeg90{
     animation: rotateByNeg90 ease-in-out 0.3s forwards;
+}
+.slide-in{
+    animation: slide-in ease-in-out 0.3s forwards;
+}
+.slide-out{
+    animation: slide-out ease-in-out 0.3s forwards;
 }
