--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -136,6 +136,38 @@
     transform: rotate(0deg);
   }
 }
+@-webkit-keyframes slide-in {
+  from {
+    left: -15rem;
+  }
+  to {
+    left: 0;
+  }
+}
+@keyframes slide-in {
+  from {
+    left: -15rem;
+  }
+  to {
+    left: 0;
+  }
+}
+@-webkit-keyframes slide-out {
+  from {
+    left: 0;
+  }
+  to {
+    left: -15rem;
+  }
+}
+@keyframes slide-out {
+  from {
+    left: 0;
+  }
+  to {
+    left: -15rem;
+  }
+}
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -155,6 +187,7 @@ body {
   font-family: "Nunito", sans-serif;
   font-size: 1.125rem;
   color: #222;
+  position: relative;
 }
 
 .container {
@@ -277,6 +310,16 @@ input:focus {
 .rotateByNeg90 {
   -webkit-animation: rotateByNeg90 ease-in-out 0.3s forwards;
           animation: rotateByNeg90 ease-in-out 0.3s forwards;
+}
+
+.slide-in {
+  -webkit-animation: slide-in ease-in-out 0.3s forwards;
+          animation: slide-in ease-in-out 0.3s forwards;
+}
+
+.slide-out {
+  -webkit-animation: slide-out ease-in-out 0.3s forwards;
+          animation: slide-out ease-in-out 0.3s forwards;
 }
 
 .header {
